IllinoisGRMHD -- Register admbase variable groups as SaveAndRestore, so that MoL knows they are needed by IllinoisGRMHD during the evolution. Simplifies scheduling within Baikal. Also remove all trailing whitespace.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
@@ -242,6 +242,40 @@
      "text": [
       "Validation test for A_i_rhs_no_gauge_terms.C: FAILED!\n",
       "Diff:\n",
+      "20c20\n",
+      "<   /* In the case of Ax_rhs, we need v{y,z}{r,l} at (i,j+1/2,k+1/2). \n",
+      "---\n",
+      ">   /* In the case of Ax_rhs, we need v{y,z}{r,l} at (i,j+1/2,k+1/2).\n",
+      "23c23\n",
+      "<    * In the case of Ay_rhs, we need v{x,z}{r,l} at (i+1/2,j,k+1/2). \n",
+      "---\n",
+      ">    * In the case of Ay_rhs, we need v{x,z}{r,l} at (i+1/2,j,k+1/2).\n",
+      "26c26\n",
+      "<    * In the case of Az_rhs, we need v{x,y}{r,l} at (i+1/2,j+1/2,k). \n",
+      "---\n",
+      ">    * In the case of Az_rhs, we need v{x,y}{r,l} at (i+1/2,j+1/2,k).\n",
+      "33c33\n",
+      "<    *    However, By_stagger{r,l} is defined at (i,j+1/2,k-1/2), and \n",
+      "---\n",
+      ">    *    However, By_stagger{r,l} is defined at (i,j+1/2,k-1/2), and\n",
+      "43c43\n",
+      "<    *    However, Bx_stagger{r,l} is defined at (i+1/2,j-1/2,k), and \n",
+      "---\n",
+      ">    *    However, Bx_stagger{r,l} is defined at (i+1/2,j-1/2,k), and\n",
+      "86c86\n",
+      "<          * Implement 2D HLL flux \n",
+      "---\n",
+      ">          * Implement 2D HLL flux\n",
+      "89c89\n",
+      "<          * Note that cmax/cmin (\\alpha^{\\pm}  as defined in that paper) is at a slightly DIFFERENT \n",
+      "---\n",
+      ">          * Note that cmax/cmin (\\alpha^{\\pm}  as defined in that paper) is at a slightly DIFFERENT\n",
+      "96,97c96,97\n",
+      "<           /( (cmax_1L+cmin_1L)*(cmax_2L+cmin_2L) ) \n",
+      "<           - cmax_1L*cmin_1L*(B2tilder_minus_B2tildel)/(cmax_1L+cmin_1L) \n",
+      "---\n",
+      ">           /( (cmax_1L+cmin_1L)*(cmax_2L+cmin_2L) )\n",
+      ">           - cmax_1L*cmin_1L*(B2tilder_minus_B2tildel)/(cmax_1L+cmin_1L)\n",
       "100a101\n",
       "> \n"
      ]
