--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb
@@ -457,14 +457,31 @@
       "---\n",
       "> \n",
       "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
-      ">  DECLARE_CCTK_PARAMETERS; \n",
+      ">  DECLARE_CCTK_PARAMETERS;\n",
       "> #endif\n",
-      ">     \n",
+      "> \n",
       "> \n",
       "31a39\n",
       "> \n",
-      "41a50\n",
+      "42c50,51\n",
+      "<         \n",
+      "---\n",
       "> \n",
+      "> \n",
+      "46c55\n",
+      "<         CCTK_REAL gtijdet = gtxxL * gtyyL * gtzzL + gtxyL * gtyzL * gtxzL + gtxzL * gtxyL * gtyzL - \n",
+      "---\n",
+      ">         CCTK_REAL gtijdet = gtxxL * gtyyL * gtzzL + gtxyL * gtyzL * gtxzL + gtxzL * gtxyL * gtyzL -\n",
+      "52,55c61,64\n",
+      "<         gtxyL = gtxyL * gtijdet_Fm1o3; \n",
+      "<         gtxzL = gtxzL * gtijdet_Fm1o3; \n",
+      "<         gtyyL = gtyyL * gtijdet_Fm1o3; \n",
+      "<         gtyzL = gtyzL * gtijdet_Fm1o3; \n",
+      "---\n",
+      ">         gtxyL = gtxyL * gtijdet_Fm1o3;\n",
+      ">         gtxzL = gtxzL * gtijdet_Fm1o3;\n",
+      ">         gtyyL = gtyyL * gtijdet_Fm1o3;\n",
+      ">         gtyzL = gtyzL * gtijdet_Fm1o3;\n",
       "58,60c67,76\n",
       "<         if(gtijdet<0.0) { CCTK_VWarn(CCTK_WARN_ALERT,__LINE__, __FILE__, CCTK_THORNSTRING,\n",
       "<                                      \"WARNING: det[3-metric]<0.0 at point  %d %d %d | cctk_lsh: %d %d %d. Hopefully this is occurring in gz's! gtij_phys = %.2e %.2e %.2e %.2e %.2e %.2e gtij_new = %.2e %.2e %.2e %.2e %.2e %.2e | gijdet = %.2e | gtijdet = %.2e\",\n",
