--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
@@ -1750,6 +1750,10 @@
      "text": [
       "Validation test for loop_defines_reconstruction.h: FAILED!\n",
       "Diff:\n",
+      "17c17\n",
+      "< // This define only sets indices. \n",
+      "---\n",
+      "> // This define only sets indices.\n",
       "39a40\n",
       "> \n"
      ]
@@ -1823,6 +1827,14 @@
      "text": [
       "Validation test for reconstruct_set_of_prims_PPM.C: FAILED!\n",
       "Diff:\n",
+      "5c5\n",
+      "<  * This version of PPM implements the standard \n",
+      "---\n",
+      ">  * This version of PPM implements the standard\n",
+      "7c7\n",
+      "<  * to have 3 ghostzones instead of 4. \n",
+      "---\n",
+      ">  * to have 3 ghostzones instead of 4.\n",
       "24c24\n",
       "<                                CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
       "---\n",
@@ -1836,14 +1848,61 @@
       "31a33,34\n",
       ">   DECLARE_CCTK_PARAMETERS;\n",
       "> \n",
-      "43a47\n",
+      "44c47,48\n",
+      "<     \n",
+      "---\n",
       "> \n",
-      "56a61\n",
       "> \n",
-      "73a79\n",
+      "55c59\n",
+      "<       // Read in a primitive at all gridpoints between m = MINUS2 & PLUS2, where m's direction is given by flux_dirn. Store to U. \n",
+      "---\n",
+      ">       // Read in a primitive at all gridpoints between m = MINUS2 & PLUS2, where m's direction is given by flux_dirn. Store to U.\n",
+      "57c61,62\n",
+      "<       \n",
+      "---\n",
       "> \n",
+      "> \n",
+      "59,60c64,65\n",
+      "<       /* First, compute simple dU = U(i) - U(i-1), where direction of i \n",
+      "<        *         is given by flux_dirn, and U is a primitive variable: \n",
+      "---\n",
+      ">       /* First, compute simple dU = U(i) - U(i-1), where direction of i\n",
+      ">        *         is given by flux_dirn, and U is a primitive variable:\n",
+      "62c67\n",
+      "<       // Note that for Ur and Ul at i, we must compute dU(i-1),dU(i),dU(i+1), \n",
+      "---\n",
+      ">       // Note that for Ur and Ul at i, we must compute dU(i-1),dU(i),dU(i+1),\n",
+      "64,67c69,72\n",
+      "<       dU[whichvar][MINUS1] = U[whichvar][MINUS1]- U[whichvar][MINUS2];  \n",
+      "<       dU[whichvar][PLUS0]  = U[whichvar][PLUS0] - U[whichvar][MINUS1]; \n",
+      "<       dU[whichvar][PLUS1]  = U[whichvar][PLUS1] - U[whichvar][PLUS0];  \n",
+      "<       dU[whichvar][PLUS2]  = U[whichvar][PLUS2] - U[whichvar][PLUS1];  \n",
+      "---\n",
+      ">       dU[whichvar][MINUS1] = U[whichvar][MINUS1]- U[whichvar][MINUS2];\n",
+      ">       dU[whichvar][PLUS0]  = U[whichvar][PLUS0] - U[whichvar][MINUS1];\n",
+      ">       dU[whichvar][PLUS1]  = U[whichvar][PLUS1] - U[whichvar][PLUS0];\n",
+      ">       dU[whichvar][PLUS2]  = U[whichvar][PLUS2] - U[whichvar][PLUS1];\n",
+      "74c79,80\n",
+      "<       // Finally, compute face values Ur and Ul based on the PPM prescription \n",
+      "---\n",
+      "> \n",
+      ">       // Finally, compute face values Ur and Ul based on the PPM prescription\n",
+      "87c93\n",
+      "<       out_prims_l[whichvar].gf[index_arr[flux_dirn][PLUS0]] = Ul[whichvar][PLUS0];      \n",
+      "---\n",
+      ">       out_prims_l[whichvar].gf[index_arr[flux_dirn][PLUS0]] = Ul[whichvar][PLUS0];\n",
       "89a96\n",
       "> \n",
+      "104,107c111,114\n",
+      "< \tdU[whichvar][MINUS1] = U[whichvar][MINUS1]- U[whichvar][MINUS2];  \n",
+      "< \tdU[whichvar][PLUS0]  = U[whichvar][PLUS0] - U[whichvar][MINUS1]; \n",
+      "< \tdU[whichvar][PLUS1]  = U[whichvar][PLUS1] - U[whichvar][PLUS0];  \n",
+      "< \tdU[whichvar][PLUS2]  = U[whichvar][PLUS2] - U[whichvar][PLUS1];  \n",
+      "---\n",
+      "> \tdU[whichvar][MINUS1] = U[whichvar][MINUS1]- U[whichvar][MINUS2];\n",
+      "> \tdU[whichvar][PLUS0]  = U[whichvar][PLUS0] - U[whichvar][MINUS1];\n",
+      "> \tdU[whichvar][PLUS1]  = U[whichvar][PLUS1] - U[whichvar][PLUS0];\n",
+      "> \tdU[whichvar][PLUS2]  = U[whichvar][PLUS2] - U[whichvar][PLUS1];\n",
       "115,117c122,124\n",
       "< \tCCTK_REAL P_cold=0,gamma_cold=0;\n",
       "< \tcompute_P_cold__gamma_cold(U[RHOB][PLUS0],eos,  P_cold,gamma_cold);\n",
@@ -1854,12 +1913,34 @@
       "> \tsteepen_rho(U,slope_lim_dU,   Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
       "125a133\n",
       "> \n",
+      "142c150\n",
+      "<       \n",
+      "---\n",
+      "> \n",
       "152a161\n",
       "> \n",
       "158a168\n",
       "> \n",
+      "160c170\n",
+      "<     out_prims_r[whichvar].gz_lo[flux_dirn]+=2; \n",
+      "---\n",
+      ">     out_prims_r[whichvar].gz_lo[flux_dirn]+=2;\n",
+      "185c195\n",
+      "<       // Then shift so that Ur represents the gridpoint at i-1/2+epsilon, \n",
+      "---\n",
+      ">       // Then shift so that Ur represents the gridpoint at i-1/2+epsilon,\n",
+      "195c205\n",
+      "<     // As for Ur, we didn't need to get rid of another ghostzone, \n",
+      "---\n",
+      ">     // As for Ur, we didn't need to get rid of another ghostzone,\n",
       "202a213\n",
       "> \n",
+      "206,207c217,218\n",
+      "< //Eq. 60 in JOURNAL OF COMPUTATIONAL PHYSICS 123, 1-14 (1996) \n",
+      "< //   [note the factor of 2 missing in the |a_{j+1} - a_{j}| term]. \n",
+      "---\n",
+      "> //Eq. 60 in JOURNAL OF COMPUTATIONAL PHYSICS 123, 1-14 (1996)\n",
+      "> //   [note the factor of 2 missing in the |a_{j+1} - a_{j}| term].\n",
       "212a224\n",
       "> \n",
       "224a237\n",
@@ -1870,19 +1951,39 @@
       "> static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL Gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
       "238a252\n",
       "> \n",
-      "240c254,255\n",
+      "240,242c254,257\n",
       "<   CCTK_REAL Gamma = gamma_th + (gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
+      "<   CCTK_REAL contact_discontinuity_check = Gamma*K0*fabs(U[RHOB][PLUS1]-U[RHOB][MINUS1])*  \n",
+      "<     MIN(U[PRESSURE][PLUS1],U[PRESSURE][MINUS1])  \n",
       "---\n",
       ">   CCTK_REAL Gamma = Gamma_th + (Gamma_cold-Gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
       "> \n",
+      ">   CCTK_REAL contact_discontinuity_check = Gamma*K0*fabs(U[RHOB][PLUS1]-U[RHOB][MINUS1])*\n",
+      ">     MIN(U[PRESSURE][PLUS1],U[PRESSURE][MINUS1])\n",
+      "247c262\n",
+      "<   if(contact_discontinuity_check >= 0.0 && second_deriv_check >= 0.0 \n",
+      "---\n",
+      ">   if(contact_discontinuity_check >= 0.0 && second_deriv_check >= 0.0\n",
       "254a270\n",
       "> \n",
+      "263c279\n",
+      "<     rho_bl_ppm[PLUS0] = rho_bl_ppm[PLUS0]*(1.0-eta) + rho_bl_mc*eta; \n",
+      "---\n",
+      ">     rho_bl_ppm[PLUS0] = rho_bl_ppm[PLUS0]*(1.0-eta) + rho_bl_mc*eta;\n",
       "268a285\n",
       "> \n",
-      "271a289\n",
+      "272,273c289,291\n",
+      "<   \n",
+      "<   if ( (Ur-U)*(U-Ul) <= 0.0) { \n",
+      "---\n",
       "> \n",
-      "277a296\n",
       "> \n",
+      ">   if ( (Ur-U)*(U-Ul) <= 0.0) {\n",
+      "278c296,297\n",
+      "<   if ( dU*(U-mU) > (1.0/6.0)*SQR(dU)) { \n",
+      "---\n",
+      "> \n",
+      ">   if ( dU*(U-mU) > (1.0/6.0)*SQR(dU)) {\n",
       "281a301\n",
       "> \n",
       "288c308,309\n",
@@ -1890,11 +1991,19 @@
       "---\n",
       "> \n",
       "> static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold) {\n",
-      "293c314\n",
+      "293c314,322\n",
       "<   if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }\n",
       "---\n",
       ">   if(rho_b==0.0) { P_cold = 0.0; Gamma_cold = eos.Gamma_ppoly_tab[0]; return; }\n",
-      "295,311c316,323\n",
+      "> \n",
+      ">   /***********************************\n",
+      ">    * Piecewise Polytropic EOS Patch  *\n",
+      ">    * Computing P_cold and Gamma_cold *\n",
+      ">    ***********************************/\n",
+      ">   int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b);\n",
+      ">   Gamma_cold = eos.Gamma_ppoly_tab[polytropic_index];\n",
+      ">   P_cold     = eos.K_ppoly_tab[polytropic_index]*pow(rho_b,Gamma_cold);\n",
+      "295,311d323\n",
       "<   if(eos.neos==1) {\n",
       "<     // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
       "<     // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
@@ -1912,15 +2021,6 @@
       "<     P_cold = eos.k_tab[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[eos.neos]);\n",
       "<     gamma_cold = eos.gamma_tab[eos.neos];\n",
       "<   }\n",
-      "---\n",
-      ">   /***********************************\n",
-      ">    * Piecewise Polytropic EOS Patch  *\n",
-      ">    * Computing P_cold and Gamma_cold *\n",
-      ">    ***********************************/\n",
-      ">   int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b);\n",
-      ">   Gamma_cold = eos.Gamma_ppoly_tab[polytropic_index];\n",
-      ">   P_cold     = eos.K_ppoly_tab[polytropic_index]*pow(rho_b,Gamma_cold);\n",
-      ">     \n",
       "313a326\n",
       "> \n",
       "334a348\n",
