--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
@@ -206,6 +206,20 @@
      "text": [
       "Validation test for symmetry__set_gzs_staggered_gfs.C: FAILED!\n",
       "Diff:\n",
+      "12c12\n",
+      "<   if(CCTK_EQUALS(Symmetry, \"equatorial\")) \n",
+      "---\n",
+      ">   if(CCTK_EQUALS(Symmetry, \"equatorial\"))\n",
+      "34c34\n",
+      "<          * if num_gzs==1 && stagger_z==1: \n",
+      "---\n",
+      ">          * if num_gzs==1 && stagger_z==1:\n",
+      "37,38c37,38\n",
+      "<          * if num_gzs==2 && stagger_z==1: \n",
+      "<          * z[] = {-3dz/2,-dz/2,dz/2,3dz/2 etc} \n",
+      "---\n",
+      ">          * if num_gzs==2 && stagger_z==1:\n",
+      ">          * z[] = {-3dz/2,-dz/2,dz/2,3dz/2 etc}\n",
       "64a65\n",
       "> \n"
      ]
