--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -2607,6 +2607,46 @@
      "text": [
       "Validation test for driver_conserv_to_prims.C: FAILED!\n",
       "Diff:\n",
+      "1c1\n",
+      "< /* We evolve forward in time a set of functions called the \n",
+      "---\n",
+      "> /* We evolve forward in time a set of functions called the\n",
+      "3,4c3,4\n",
+      "<  *  are updated, we must solve for the primitive variables \n",
+      "<  *  (rho, pressure, velocities) using a Newton-Raphson \n",
+      "---\n",
+      ">  *  are updated, we must solve for the primitive variables\n",
+      ">  *  (rho, pressure, velocities) using a Newton-Raphson\n",
+      "6c6\n",
+      "<  *  of the MHD equations again. \n",
+      "---\n",
+      ">  *  of the MHD equations again.\n",
+      "9,12c9,12\n",
+      "<  *  Raphson solver. Truncation errors in conservative \n",
+      "<  *  variables can lead to no physical solutions in \n",
+      "<  *  primitive variables. We correct for these errors here \n",
+      "<  *  through a number of tricks described in the appendices \n",
+      "---\n",
+      ">  *  Raphson solver. Truncation errors in conservative\n",
+      ">  *  variables can lead to no physical solutions in\n",
+      ">  *  primitive variables. We correct for these errors here\n",
+      ">  *  through a number of tricks described in the appendices\n",
+      "15,16c15,16\n",
+      "<  * This is a wrapper for the 2d solver of Noble et al. See \n",
+      "<  *  harm_utoprim_2d.c for references and copyright notice \n",
+      "---\n",
+      ">  * This is a wrapper for the 2d solver of Noble et al. See\n",
+      ">  *  harm_utoprim_2d.c for references and copyright notice\n",
+      "19,20c19,20\n",
+      "<  * \n",
+      "<  * For optimal compatibility, this wrapper is licensed under \n",
+      "---\n",
+      ">  *\n",
+      ">  * For optimal compatibility, this wrapper is licensed under\n",
+      "23c23\n",
+      "<  * Note that this code assumes a simple gamma law for the \n",
+      "---\n",
+      ">  * Note that this code assumes a simple gamma law for the\n",
       "27,28c27\n",
       "< \n",
       "< #include \"cctk.h\"\n",
@@ -2623,18 +2663,13 @@
       "> #include \"cctk.h\"\n",
       "41a46\n",
       "> #include \"harm_u2p_util.c\"\n",
-      "48c53\n",
-      "< \n",
-      "---\n",
-      ">   \n",
-      "51,54c56,68\n",
-      "< \n",
+      "50a56\n",
+      "> #endif\n",
+      "52,54c58,68\n",
       "<   // FIXME: This is definitely one of the places we need to look at later.\n",
       "<   //           Will leave this comment to emphasize the \"FIXME\" below.\n",
       "<   // FIXME: only for single gamma-law EOS.\n",
       "---\n",
-      "> #endif\n",
-      ">     \n",
       ">   /**********************************\n",
       ">    * Piecewise Polytropic EOS Patch *\n",
       ">    *   Setting up the EOS struct    *\n",
@@ -2676,13 +2711,24 @@
       "> \n",
       "152a165\n",
       "> \n",
-      "154a168\n",
+      "155c168,169\n",
+      "<     \n",
+      "---\n",
+      "> \n",
       "> \n",
       "169a184\n",
       "> \n",
       "176a192\n",
       "> \n",
+      "190c206\n",
+      "<         \n",
+      "---\n",
+      "> \n",
       "202a219\n",
+      "> \n",
+      "210c227\n",
+      "<         \n",
+      "---\n",
       "> \n",
       "223a241\n",
       "> \n",
@@ -2701,13 +2747,25 @@
       ">           CCTK_REAL K_ppoly_tab     = eos.K_ppoly_tab[polytropic_index];\n",
       ">           CCTK_REAL Gamma_ppoly_tab = eos.K_ppoly_tab[polytropic_index];\n",
       ">           PRIMS[PRESSURE]      = K_ppoly_tab*pow(rho_b_atm,Gamma_ppoly_tab);\n",
-      ">             \n",
+      "> \n",
       "257a278\n",
       "> \n",
       "261a283\n",
       "> \n",
       "274a297\n",
       "> \n",
+      "304c327\n",
+      "<         error_int_numer += fabs(tau[index] - tau_orig) + fabs(rho_star[index] - rho_star_orig) + \n",
+      "---\n",
+      ">         error_int_numer += fabs(tau[index] - tau_orig) + fabs(rho_star[index] - rho_star_orig) +\n",
+      "341c364\n",
+      "<   \n",
+      "---\n",
+      "> \n",
+      "346c369\n",
+      "<   // Very useful con2prim debugger. If the primitives (con2prim) solver fails, this will output all data needed to \n",
+      "---\n",
+      ">   // Very useful con2prim debugger. If the primitives (con2prim) solver fails, this will output all data needed to\n",
       "348c371\n",
       "<   if(conserv_to_prims_debug==1) {\n",
       "---\n",
@@ -2764,7 +2822,11 @@
       ">     myfile.write((char *)gyz, fullsize*sizeof(CCTK_REAL));\n",
       ">     myfile.write((char *)gzz, fullsize*sizeof(CCTK_REAL));\n",
       ">     myfile.write((char *)psi_bssn, fullsize*sizeof(CCTK_REAL));\n",
-      ">     \n",
+      "> \n",
+      "399c445\n",
+      "<  \n",
+      "---\n",
+      "> \n",
       "421c467\n",
       "<     CCTK_VInfo(CCTK_THORNSTRING,\"Finished writing...\");\n",
       "---\n",
@@ -2861,12 +2923,26 @@
       "<   CCTK_REAL gamma = eos.gamma_tab[0];\n",
       "<   int gamma_equals2 = 1;\n",
       "<   if (fabs(gamma-2.0) > 1.e-10) gamma_equals2 = 0;\n",
+      "15c12\n",
+      "<   CCTK_REAL U[NPR]; \n",
+      "---\n",
+      ">   CCTK_REAL U[NPR];\n",
       "42a40\n",
       "> \n",
+      "46c44\n",
+      "<   // This is NOT the \\mathcal{B}^i, which differs by \n",
+      "---\n",
+      ">   // This is NOT the \\mathcal{B}^i, which differs by\n",
       "51a50\n",
       "> \n",
       "57a57\n",
       "> \n",
+      "60,61c60,61\n",
+      "<     between the two sets of definitions for U and P.  The user may \n",
+      "<     wish to alter the translation as they see fit.  \n",
+      "---\n",
+      ">     between the two sets of definitions for U and P.  The user may\n",
+      ">     wish to alter the translation as they see fit.\n",
       "64,72c64,72\n",
       "<     //         /  rho u^t           \\                             //\n",
       "<     //    U =  |  T^t_t   + rho u^t |  sqrt(-det(g_{\\mu\\nu}))     //\n",
@@ -2887,6 +2963,18 @@
       ">     //    P = |     uu      |                               //\n",
       ">     //        | \\tilde{u}^i |                               //\n",
       ">     //        \\     B^i     /                               //\n",
+      "76c76\n",
+      "<   \n",
+      "---\n",
+      "> \n",
+      "81c81\n",
+      "<   // prim[NPR] = primitive variables (guess on input, calculated values on \n",
+      "---\n",
+      ">   // prim[NPR] = primitive variables (guess on input, calculated values on\n",
+      "84c84\n",
+      "<   // U[1]   =  \n",
+      "---\n",
+      ">   // U[1]   =\n",
       "92a93\n",
       "> \n",
       "103a105\n",
@@ -2924,7 +3012,7 @@
       "<         P_oldL = kpoly*pow(rho_b_oldL,gamma);\n",
       "<       }\n",
       "---\n",
-      ">       \n",
+      "> \n",
       ">       /**********************************\n",
       ">        * Piecewise Polytropic EOS Patch *\n",
       ">        *  Finding Gamma_ppoly_tab and K_ppoly_tab *\n",
@@ -2944,6 +3032,10 @@
       "> \n",
       "136a164\n",
       "> \n",
+      "139c167\n",
+      "<     U[UU]     = -CONSERVS[TAUENERGY]*METRIC_LAP_PSI4[LAPSE] - (METRIC_LAP_PSI4[LAPSE]-1.0)*CONSERVS[RHOSTAR] + \n",
+      "---\n",
+      ">     U[UU]     = -CONSERVS[TAUENERGY]*METRIC_LAP_PSI4[LAPSE] - (METRIC_LAP_PSI4[LAPSE]-1.0)*CONSERVS[RHOSTAR] +\n",
       "148c176,177\n",
       "<     CCTK_REAL uL = P_oldL/(gamma_th /* <- Should be local polytropic gamma factor */ - 1.0);\n",
       "---\n",
@@ -2951,12 +3043,19 @@
       ">     CCTK_REAL uL = P_oldL/(Gamma_ppoly_tab - 1.0);\n",
       "161a191\n",
       "> \n",
-      "164c194\n",
+      "164,166c194,196\n",
       "<     check = Utoprim_2d(U, g4dn, g4up, detg, prim,stats.n_iter);\n",
+      "<     // Note that we have modified this solver, so that nearly 100% \n",
+      "<     // of the time it yields either a good root, or a root with \n",
       "---\n",
       ">     check = Utoprim_2d(eos, U, g4dn, g4up, detg, prim,stats.n_iter);\n",
-      "169a200\n",
+      ">     // Note that we have modified this solver, so that nearly 100%\n",
+      ">     // of the time it yields either a good root, or a root with\n",
+      "170c200,201\n",
+      "<     // Use the new Font fix subroutine \n",
+      "---\n",
       "> \n",
+      ">     // Use the new Font fix subroutine\n",
       "175,179c206,210\n",
       "<       if (gamma_equals2==1) {\n",
       "<         check = font_fix_gamma_equals2(u_xl,u_yl,u_zl,CONSERVS,PRIMS,METRIC_PHYS,METRIC_LAP_PSI4,eos);\n",
@@ -2981,7 +3080,7 @@
       "<         }\n",
       "<         prim[UU] = P_cold/(gamma_th /* <- Should be local polytropic gamma factor */-1.0);\n",
       "---\n",
-      ">           \n",
+      "> \n",
       ">         /**********************************\n",
       ">          * Piecewise Polytropic EOS Patch *\n",
       ">          *  Finding Gamma_ppoly_tab and K_ppoly_tab *\n",
@@ -2998,7 +3097,7 @@
       "> \n",
       ">         // After that, we compute P_cold\n",
       ">         P_cold = K_ppoly_tab*pow(prim[RHO],Gamma_ppoly_tab);\n",
-      ">           \n",
+      "> \n",
       ">         prim[UU] = P_cold/(Gamma_ppoly_tab-1.0);\n",
       "237,239c283,301\n",
       "<       PRIMS[RHOB]      = prim[RHO];\n",
@@ -3114,7 +3213,7 @@
       "<  * FIXME: There exist better fixes/strategies now. See McKinney et al's work.\n",
       "<  *\n",
       "<  -----------------------------------------------------------------------------*/\n",
-      "12,90d1\n",
+      "12,60d1\n",
       "< inline int font_fix_gamma_equals2(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,eos_struct &eos) {\n",
       "<   CCTK_REAL rhob;\n",
       "<   CCTK_REAL kpoly2 = 2.0*eos.K_poly;\n",
@@ -3164,7 +3263,7 @@
       "<   //   BbardotS *= fac_reduce;\n",
       "<   //   BbardotS2 = BbardotS*BbardotS;\n",
       "<   //}\n",
-      "< \n",
+      "62,165c3,7\n",
       "<   CCTK_REAL sdots = METRIC_PHYS[GUPXX]*SQR(CONSERVS[STILDEX]) + METRIC_PHYS[GUPYY]*SQR(CONSERVS[STILDEY]) + METRIC_PHYS[GUPZZ]*SQR(CONSERVS[STILDEZ])\n",
       "<     + 2.0*( METRIC_PHYS[GUPXY]*CONSERVS[STILDEX]*CONSERVS[STILDEY] + METRIC_PHYS[GUPXZ]*CONSERVS[STILDEX]*CONSERVS[STILDEZ]\n",
       "<             + METRIC_PHYS[GUPYZ]*CONSERVS[STILDEY]*CONSERVS[STILDEZ]);\n",
@@ -3194,7 +3293,7 @@
       "<   //   acceptable set of primitives.\n",
       "<   //****************************************************************\n",
       "<   bool fontcheck=true;\n",
-      "92,165c3,7\n",
+      "< \n",
       "<   int itcount = 0, maxits=300;\n",
       "<   while(fontcheck && itcount < maxits) {\n",
       "<     itcount++;\n",
@@ -3285,7 +3384,7 @@
       ">   CCTK_REAL Sf20  = (SQR(W0)*sdots + BbardotS2*(B2bar + 2.0*W0))/SQR(W0+B2bar);\n",
       "232d74\n",
       "<   CCTK_REAL W=W0,Sf2=Sf20,rhob1=rhob0;\n",
-      "240,262c82,106\n",
+      "240,262c82,83\n",
       "<   bool fontcheck=true;\n",
       "< \n",
       "<   int itcount = 0, maxits=500;\n",
@@ -3312,30 +3411,7 @@
       "---\n",
       ">   /* Set the maximum number of iterations */\n",
       ">   int maxits = 500;\n",
-      ">     \n",
-      ">   /* Set the allowed tolerance */\n",
-      ">   CCTK_REAL tol = 1.e-15;\n",
-      ">     \n",
-      ">   /* Declare basic variables */\n",
-      ">   int font_fix_status;\n",
-      ">   \n",
-      ">   /**********************\n",
-      ">    * FONT FIX MAIN LOOP *\n",
-      ">    **********************\n",
-      ">    * Perform the font fix routine until convergence\n",
-      ">    * is obtained and the algorithm returns with no\n",
-      ">    * error. Every time the Font fix fails, increase\n",
-      ">    * the tolerance by a factor of 10.\n",
-      ">    */\n",
-      ">    int font_fix_attempts = 5;\n",
-      ">    CCTK_REAL font_fix_tol_factor = 10.0;\n",
-      ">    for(int n=0; n<font_fix_attempts; n++) {\n",
-      ">        \n",
-      ">     tol *= pow(font_fix_tol_factor,n);\n",
-      ">     font_fix_status = font_fix__rhob_loop(maxits,tol, W0,Sf20,Psim6,sdots,BbardotS2,B2bar, CONSERVS,eos, rhob0,rhob);\n",
-      ">     rhob0 = rhob;\n",
-      ">     if(font_fix_status==0) break;\n",
-      "264,288d107\n",
+      "264,290c85,86\n",
       "<   if (itcount>=maxits) {\n",
       "<     // Increase tol and try again\n",
       "<     fontcheck=true;\n",
@@ -3361,15 +3437,43 @@
       "<       Sf2 = (SQR(W)*sdots + BbardotS2*(B2bar + 2.0*W))/SQR(W+B2bar);\n",
       "<       if ( fabs(W-W0) < W*tol && fabs(Sf20-Sf2) < Sf2*tol) fontcheck=false;\n",
       "<     }\n",
-      "292,298c111,122\n",
+      "<   }\n",
+      "<   //************************************************************************************************************** \n",
+      "---\n",
+      ">   /* Set the allowed tolerance */\n",
+      ">   CCTK_REAL tol = 1.e-15;\n",
+      "292,294c88,89\n",
       "<   if(fontcheck==true) {\n",
       "<     return 1;\n",
       "<   }\n",
-      "< \n",
+      "---\n",
+      ">   /* Declare basic variables */\n",
+      ">   int font_fix_status;\n",
+      "296,298c91,122\n",
       "<   // Font fix works, now compute u_i\n",
       "<   rhob = rhob1;\n",
       "<   CCTK_REAL h = 1.0+gam_gamm1_kpoly*pow(rhob,gam1);\n",
       "---\n",
+      ">   /**********************\n",
+      ">    * FONT FIX MAIN LOOP *\n",
+      ">    **********************\n",
+      ">    * Perform the font fix routine until convergence\n",
+      ">    * is obtained and the algorithm returns with no\n",
+      ">    * error. Every time the Font fix fails, increase\n",
+      ">    * the tolerance by a factor of 10.\n",
+      ">    */\n",
+      ">    int font_fix_attempts = 5;\n",
+      ">    CCTK_REAL font_fix_tol_factor = 10.0;\n",
+      ">    for(int n=0; n<font_fix_attempts; n++) {\n",
+      "> \n",
+      ">     tol *= pow(font_fix_tol_factor,n);\n",
+      ">     font_fix_status = font_fix__rhob_loop(maxits,tol, W0,Sf20,Psim6,sdots,BbardotS2,B2bar, CONSERVS,eos, rhob0,rhob);\n",
+      ">     rhob0 = rhob;\n",
+      ">     if(font_fix_status==0) break;\n",
+      "> \n",
+      ">   }\n",
+      ">   //**************************************************************************************************************\n",
+      "> \n",
       ">   /* Font fix works! */\n",
       ">   /* First compute P_cold, eps_cold, then h = h_cold */\n",
       ">   CCTK_REAL P_cold, eps_cold;\n",
@@ -3383,7 +3487,7 @@
       ">    * .-----------------------------------------.\n",
       ">    */\n",
       "299a124,125\n",
-      ">     \n",
+      "> \n",
       ">   /* Finally, compute u_{i} */\n",
       "308a135\n",
       "> \n"
@@ -3460,10 +3564,54 @@
      "text": [
       "Validation test for harm_primitives_headers.h: FAILED!\n",
       "Diff:\n",
+      "2c2\n",
+      "<     Copyright 2006 Charles F. Gammie, Jonathan C. McKinney, Scott C. Noble, \n",
+      "---\n",
+      ">     Copyright 2006 Charles F. Gammie, Jonathan C. McKinney, Scott C. Noble,\n",
+      "7c7\n",
+      "<     This file is part of HARM.  HARM is a program that solves hyperbolic \n",
+      "---\n",
+      ">     This file is part of HARM.  HARM is a program that solves hyperbolic\n",
+      "9,10c9,10\n",
+      "<     shock-capturing techniques.  This version of HARM has been configured to \n",
+      "<     solve the relativistic magnetohydrodynamic equations of motion on a \n",
+      "---\n",
+      ">     shock-capturing techniques.  This version of HARM has been configured to\n",
+      ">     solve the relativistic magnetohydrodynamic equations of motion on a\n",
+      "12c12\n",
+      "<     an accretion disk model. \n",
+      "---\n",
+      ">     an accretion disk model.\n",
+      "14c14\n",
+      "<     You are morally obligated to cite the following two papers in his/her \n",
+      "---\n",
+      ">     You are morally obligated to cite the following two papers in his/her\n",
+      "17c17\n",
+      "<     [1] Gammie, C. F., McKinney, J. C., \\& Toth, G.\\ 2003, \n",
+      "---\n",
+      ">     [1] Gammie, C. F., McKinney, J. C., \\& Toth, G.\\ 2003,\n",
+      "20c20\n",
+      "<     [2] Noble, S. C., Gammie, C. F., McKinney, J. C., \\& Del Zanna, L. \\ 2006, \n",
+      "---\n",
+      ">     [2] Noble, S. C., Gammie, C. F., McKinney, J. C., \\& Del Zanna, L. \\ 2006,\n",
+      "23,24c23,24\n",
+      "<    \n",
+      "<     Further, we strongly encourage you to obtain the latest version of \n",
+      "---\n",
+      "> \n",
+      ">     Further, we strongly encourage you to obtain the latest version of\n",
+      "59c59\n",
+      "<   #if( USE_ISENTROPIC ) \n",
+      "---\n",
+      ">   #if( USE_ISENTROPIC )\n",
+      "89c89\n",
+      "< static const int RHO    =0; \n",
+      "---\n",
+      "> static const int RHO    =0;\n",
       "106c106\n",
       "< int Utoprim_2d(CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], \n",
       "---\n",
-      "> int Utoprim_2d(eos_struct eos, CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], \n",
+      "> int Utoprim_2d(eos_struct eos, CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM],\n",
       "115,117c115\n",
       "< inline int font_fix_general_gamma(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,eos_struct &eos);\n",
       "< inline int font_fix_gamma_equals2(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,eos_struct &eos);\n",
