--- a/NRPyPN/PN-MOmega.ipynb
+++ b/NRPyPN/PN-MOmega.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "As described in the [nonspinning Hamiltonian notebook](PN-Hamiltonian-Nonspinning.ipynb), the basic physical system assumes two point particles of mass $m_1$ and $m_2$ with corresponding momentum vectors $\\mathbf{P}_1$ and $\\mathbf{P}_2$, and displacement vectors $\\mathbf{X}_1$ and $\\mathbf{X}_2$ with respect to the center of mass. Here we also consider the spin vectors of each point mass $\\mathbf{S}_1$ and $\\mathbf{S}_2$, respectively.\n",
     "\n",
-    "To reduce possibility of copying error, the equation for $M\\Omega$ is taken directly from the arXiv LaTeX source code of Eq A1 in [Ramos-Buades, Husa, and Pratten (2018)](https://arxiv.org/abs/1810.00036), and only mildly formatted to (1) improve presentation in Jupyter notebooks, (2) to ensure some degree of consistency in notation across different terms in other NRPyPN notebooks, and (3) to correct any errors. In particular, the boxed negative sign at 2.5PN order ($a_5$ below) was missing in the original equation. We will later show that this negative sign is necessary for consistency with other expressions in the same paper, as well as with the expression up to 3PN order in :\n",
+    "To reduce possibility of copying error, the equation for $M\\Omega$ is taken directly from the arXiv LaTeX source code of Eq A1 in [Ramos-Buades, Husa, and Pratten (2018)](https://arxiv.org/abs/1810.00036), and only mildly formatted to (1) improve presentation in Jupyter notebooks, (2) to ensure some degree of consistency in notation across different terms in other NRPyPN notebooks, and (3) to correct any errors. In particular, the boxed negative sign at 2.5PN order ($a_5$ below) was missing in the original equation. We will later show that this negative sign is necessary for consistency with the expression up to 3PN order in [Healy, Lousto, Nakano, and Zlochower (2017)](https://arxiv.org/abs/1702.00872):\n",
     "$$\n",
     "M\\Omega = \\frac{1}{r^{3/2}}\\left(1 + \\sum_{k=2}^7 \\frac{a_k}{r^{k/2}}\\right),\n",
     "$$\n",
@@ -175,6 +175,7 @@
    "metadata": {},
    "source": [
     "Next, $a_5$ and $a_6$:\n",
+    "\n",
     "\\begin{align}\n",
     "a_5 &= \\frac{3 \\left(13 q^3+34 q^2+30 q+16\\right) \\chi _{1z}}{16 (q+1)^4}+  \\frac{3 q \\left(16 q^3+30 q^2+34 q+13\\right) \\chi _{2z}}{16 (q+1)^4 }\\\\\n",
     "a_6 &=  \\frac{\\left(155 q^2+180 q+76\\right) \\chi _{1x}^2}{16 (q+1)^4 \\boxed{r^3}}+\\frac{q \\left(120 q^2+187 q+120\\right) \\chi _{1x} \\chi _{2x}}{8 (q+1)^4 \\boxed{r^3}}-\\frac{\\left(55 q^2+85 q+43\\right) \\chi _{1y}^2}{8 (q+1)^4 \\boxed{r^3}} \\\\\n",
@@ -262,6 +263,7 @@
    "metadata": {},
    "source": [
     "Finally, $a_7$:\n",
+    "\n",
     "\\begin{align}\n",
     "a_7 &= \\frac{3 (4 q+1) q^3 \\chi _{2 x}^2 \\chi _{2 z}}{2 (q+1)^4}-\\frac{3 (4 q+1) q^3 \\chi _{2 y}^2 \\chi _{2 z}}{8 (q+1)^4}-\\frac{3 (4 q+1) q^3 \\chi _{2 z}^3}{8 (q+1)^4}+\\chi _{1x} \\left(\\frac{9 (2 q+1) q^2 \\chi _{2 x} \\chi _{2 z}}{4 (q+1)^4}+\\frac{9 (q+2) q \\chi _{2 x} \\chi _{\\boxed{?}z}}{4 (q+1)^4}\\right) \\\\\n",
     "& +\\chi _{1y} \\left(\\frac{9 q^2 \\chi _{2 y} \\chi _{1z}}{4 (q+1)^4}+\\frac{9 q^2 \\chi _{2 y} \\chi _{2 z}}{4 (q+1)^4}\\right) \\\\\n",
@@ -352,6 +354,7 @@
    "metadata": {},
    "source": [
     "Putting it all together, recall that\n",
+    "\n",
     "$$\n",
     "M\\Omega = \\frac{1}{r^{3/2}}\\left(1 + \\sum_{k=2}^7 \\frac{a_k}{r^{k/2}}\\right),\n",
     "$$\n",
@@ -524,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
