in_progress/GiRaFFE_NRPy: update intro mostly

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Numerical_Methods.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Numerical_Methods.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Authors: Patrick Nelson &\n",
     "\n",
-    "In this module, we will introduce the numerical methods with which we will solve the GRFFE equations.\n",
+    "In this notebook, we will introduce the numerical methods with which we will solve the GRFFE equations.\n",
     "\n",
     "`GiRaFFE_NRPy` supports uniform Cartesian grids at the moment. We plan to expand this using the many options NRPy+ offers us. The grids are, unless otherwise specified, cell-centered. We employ two different prescriptions; in the first, all quantities are sampled at cell centers, and in the second the vector potential, magnetic field, and scalar potential are staggered. They will be referred to as unstaggered and staggered, respectively.\n",
     "\n",
@@ -82,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
