SEOBNR: restructure steps in derivatie routine to make documentation more clear.

--- a/in_progress/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -121,13 +121,7 @@
     "rhss = []\n",
     "for i in range(len(lr)):\n",
     "    lhss.append(sp.sympify(lr[i].lhs))\n",
-    "    rhss.append(sp.sympify(lr[i].rhs))\n",
-    "\n",
-    "# Step 2.e: Read in variables with which to take derivatives\n",
-    "with open('SEOBNR/Hamstring_variables.txt', 'r') as file:\n",
-    "    variables = file.read()\n",
-    "# Step 2.f: Split the variable string by carriage returns\n",
-    "dynamic_variables = variables.splitlines()"
+    "    rhss.append(sp.sympify(lr[i].rhs))"
    ]
   },
   {
@@ -139,7 +133,7 @@
     "# Step 3: Read in constants \\[Back to [top](#toc)\\]\n",
     "$$\\label{step3}$$\n",
     "\n",
-    "We declare the constant values; derivatives with respect to these variables will be set to zero."
+    "We read in and declare as SymPy symbols the constant values; derivatives with respect to these variables will be set to zero.  We then read in the variables with respect to which we want to take derivatives and declare those as SymPy variables as well."
    ]
   },
   {
@@ -159,7 +153,20 @@
     "input_constants = []\n",
     "for constant in constants_as_strings:\n",
     "    constant = sp.symbols(constant,real=True)\n",
-    "    input_constants.append(constant)"
+    "    input_constants.append(constant)\n",
+    "\n",
+    "# Step 3.d: Read in variables with which to take derivatives\n",
+    "with open('SEOBNR/Hamstring_variables.txt', 'r') as file:\n",
+    "    variables = file.read()\n",
+    "\n",
+    "# Step 3.e: Split the variable string by carriage returns\n",
+    "variables_as_strings = variables.splitlines()\n",
+    "\n",
+    "#Step 3.f: Create \"dynamic_variables\" array and populate with SymPy symbols\n",
+    "dynamic_variables = []\n",
+    "for variable in variables_as_strings:\n",
+    "    variable = sp.symbols(variable,real=True)\n",
+    "    dynamic_variables.append(variable)"
    ]
   },
   {
