Tutorial-SommerfeldBoundaryCondition: Fix formatting.

--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -49,7 +49,7 @@
     "1. [Step 2](#sbc): Definition and mathematical motivation\n",
     "    1. [Step 2.a](#intro): Introduction & background mathematics\n",
     "    1. [Step 2.b](#sbc_prelims): Preliminaries - The scalar wave equation in curvilinear coordinates\n",
-    "    1. [Step 2.c](#sbc_ansatz): Preliminaries - The scalar wave equation in curvilinear coordinates\n",
+    "    1. [Step 2.c](#sbc_ansatz): Sommerfeld boundary condition ansatz\n",
     "    1. [Step 2.d](#sbc_ansatz_dtf): Applying the ansatz to $\\partial_t f$\n",
     "    1. [Step 2.e](#curvicoords): Implementation in generic curvilinear coordinates\n",
     "1. [Step 3](#numalg): Numerical algorithm overview\n",
