Tutorial-SommerfeldBoundaryCondition: tidy up some of the language.

--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -272,11 +272,11 @@
     "\n",
     "$\\frac{\\partial x^i}{\\partial r}$ can be impossible to compute directly, as we are given $r(x^i)$ but not necessarily $x^i(r)$. The key here is to note that we are actually given $x^j_{\\rm Sph} = (r(x^i),\\theta(x^i),\\phi(x^i))$ for all coordinate systems, so we can define the Jacobian\n",
     "\n",
-    "$$\\frac{\\partial x^j_{\\rm Sph}}{x^i}$$,\n",
+    "$$\\frac{\\partial x^j_{\\rm Sph}(x^i)}{x^i},$$\n",
     "\n",
     "and NRPy+ can invert this matrix to give us\n",
     "\n",
-    "$$\\frac{\\partial x^i}{x^j_{\\rm Sph}}$$!"
+    "$$\\frac{\\partial x^i}{x^j_{\\rm Sph}}!$$"
    ]
   },
   {
@@ -317,7 +317,7 @@
     "\\partial_t f = -\\frac{v}{r} \\left[ x^i \\partial_i f + \\left( f - f_0 \\right) \\right] + \\frac{k}{r^{n+1}}.\n",
     "$$\n",
     "\n",
-    "Now let's use NRPy+'s `reference_metric.py` to obtain the same expression:"
+    "Now let's use NRPy+'s `reference_metric.py` to obtain the same expression for $\\frac{\\partial f}{\\partial r}$, but using the generic coordinate system interface (`CoordSystem=Cartesian`; feel free to change it to another coordinate system of your choice!):"
    ]
   },
   {
@@ -338,6 +338,8 @@
     "import indexedexp as ixp\n",
     "import sympy as sp\n",
     "import reference_metric as rfm\n",
+    "# Choices include: Spherical, SinhSpherical, SinhSphericalv2,\n",
+    "#                  Cylindrical, SinhCylindrical, SymTP, SinhSymTP\n",
     "CoordSystem = \"Cartesian\"\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",CoordSystem)\n",
     "rfm.reference_metric()\n",
@@ -377,7 +379,7 @@
     "* its asymptotic value at infinity, and \n",
     "* its the $r^n$ power that must be applied for the non-wavelike behavior at the boundary. \n",
     "\n",
-    "In our own implementations we have found that $n=3$ exhibits the best results for minimal reflections. The [Einstein Toolkit's NewRad boundary condition driver](https://www.einsteintoolkit.org/thornguide/EinsteinEvolve/NewRad/documentation.html#XEinsteinEvolve_NewRad_Alcubierre:2002kk) documentation page also states similar results, writing \"empirically, we have found that taking $n = 3$ almost completely eliminates the bad transient caused by the radiative boundary condition on its own\". The following set of code cells implement the above equation, excluding the $\\frac{k}{r^{n+1}}$ term, for a Cartesian grid."
+    "In our own implementations we have found that $n=2$ exhibits the best results for minimal reflections. The [Einstein Toolkit's NewRad boundary condition driver](https://www.einsteintoolkit.org/thornguide/EinsteinEvolve/NewRad/documentation.html#XEinsteinEvolve_NewRad_Alcubierre:2002kk) documentation page also states similar results, writing \"empirically, we have found that taking $n = 2$ almost completely eliminates the bad transient caused by the radiative boundary condition on its own\". The following set of code cells implement the above equation, excluding the $\\frac{k}{r^{n+1}}$ term, for a Cartesian grid."
    ]
   },
   {
